# peek

./: Makefile.am  configure.ac
etc/: conf
etc/modules/: find-class-c-networks  find-hosts  find-ports  iterate-network  ping-network
rules/: find-http-hosts:net:  find-open-tcp-ports:host:  lookup-name:host:
src/: data.c  data.h  main.c  peek.c  peek.h  poke.c  poke.h  rule.c  rule.h  value.h
